src/objects/SwitchLog__c.object
<CustomObject>
    <fields>
        <fullName>ActionAtStateStart__c</fullName>
        <label>ActionAtStateStart</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POWER OFF</fullName>
                </value>
                <value>
                    <fullName>POWER ON</fullName>
                </value>
                <value>
                    <fullName>NETWORK FAILURE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelaySwitch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelaySwitch</label>
        <referenceTo>RelaySwitch__c</referenceTo>
        <relationshipLabel>SwitchLogs</relationshipLabel>
        <relationshipName>SwitchLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StateStartTime__c</fullName>
        <label>StateStartTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StateStopTime__c</fullName>
        <label>StateStopTime</label>
        <type>DateTime</type>
    </fields>
    <label>SwitchLog</label>
    <nameField>
        <displayFormat>SW-LG-{0000000}</displayFormat>
        <label>SwitchLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SwitchLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>